Added tablet with slider

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -143,7 +143,8 @@
                 <svg class="icon menu-actions__icon">
                   <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-study"></use>
                 </svg>
-                <h3 class="menu-actions__title typographic-mb">Адаптированная программа подготовки к ВНО</h3>
+                <h3 class="menu-actions__title typographic-mb">Адаптированная программа
+                  подготовки к ВНО</h3>
                 <p class="menu-actions__text typographic-mr">Ты будешь изучать грамматику<br />
                   и лексику одновременно. <br />
                   И ты научишься писать сочинения.</p>
@@ -177,7 +178,8 @@
                 <svg class="icon menu-actions__icon">
                   <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-communication"></use>
                 </svg>
-                <h3 class="menu-actions__title typographic-mb">Психологическая поддержка</h3>
+                <h3 class="menu-actions__title typographic-mb">Психологическая
+                  поддержка</h3>
                 <p class="menu-actions__text typographic-mr">Мы научим тебя методикам прохождения тестирований, умению
                   планировать свою
                   подготовку уверенности в себе</p>
@@ -188,7 +190,8 @@
                 <svg class="icon menu-actions__icon">
                   <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-female"></use>
                 </svg>
-                <h3 class="menu-actions__title typographic-mb">Обучение по автроским пособиям</h3>
+                <h3 class="menu-actions__title typographic-mb">Обучение по автроским
+                  пособиям</h3>
                 <p class="menu-actions__text typographic-mr">Тебе не нужно тратить время на самостоятельный поиск
                   материала и ничего покупать
                   дополнительно. Мы составили 2 пособия для тебя.</p>
@@ -199,7 +202,8 @@
                 <svg class="icon menu-actions__icon">
                   <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-audio-book"></use>
                 </svg>
-                <h3 class="menu-actions__title typographic-mb">Умение воспринивать устную английскую речь</h3>
+                <h3 class="menu-actions__title typographic-mb">Умение воспринивать
+                  устную английскую речь</h3>
                 <p class="menu-actions__text typographic-mr">“F.R.I.E.N.D.S” тебе не помогут.
                   Ты будешь регулярно слушать и разбирать аудиозаписи в соответствии с изучаемой лексикой.</p>
               </a>
@@ -209,68 +213,107 @@
       </section>
 
       <section class="section-program">
-        <div class="section-program__wrapper">
+        <div class="section-program__wrapper container">
           <h2 class="section-program__title typographic-meb text-white">Наша программа</h2>
           <ul class="list-program section-program__list">
             <li class="list-program__item">
+
               <div class="list-program__wrapper">
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
-                <span class="list-program__segment">Grammar</span>
-                <p class="list-program__text typographic-mr ">
-                  Nouns & Articles
-                  Adjectives & Adverb</p>
-                <span class="list-program__segment">Vocabulary</span>
-                <p class="list-program__text typographic-mr ">
-                  Family & Relations People & Society</p>
+                <ul class="list-program__contents">
+                  <li class="list-program__content">
+                    <span class="list-program__segment">Grammar</span>
+                    <p class="list-program__text typographic-mr ">Nouns & Articles
+                      Adjectives & Adverb</p>
+                  </li>
+                  <li class="list-program__content">
+                    <span class="list-program__segment">Vocabulary</span>
+                    <p class="list-program__text typographic-mr ">Family & Relations
+                      People & Society</p>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-program__item">
               <div class="list-program__wrapper">
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
-                <span class="list-program__segment">Grammar</span>
-                <p class="list-program__text typographic-mr ">
-                  Pronouns <br /> Active Voice <br /> Passive Voice</p>
-                <span class="list-program__segment">Vocabulary</span>
-                <p class="list-program__text typographic-mr ">
-                  Home <br /> School <br /> Worky</p>
+                <ul class="list-program__contents">
+                  <li class="list-program__content">
+                    <span class="list-program__segment">Grammar</span>
+                    <p class="list-program__text typographic-mr ">Pronouns
+                      Active Voice
+                      Passive Voice</p>
+                  </li>
+                  <li class="list-program__content">
+                    <span class="list-program__segment">Vocabulary</span>
+                    <p class="list-program__text typographic-mr">Home
+                      School
+                      Worky</p>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-program__item">
               <div class="list-program__wrapper">
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
-                <span class="list-program__segment">Grammar</span>
-                <p class="list-program__text typographic-mr ">
-                  Modal verbs <br /> Infinitive <br /> Gerund <br /> Participle: 1, 2</p>
-                <span class="list-program__segment">Vocabulary</span>
-                <p class="list-program__text typographic-mr ">
-                  Travel & Tourism <br /> Culture & Free Time <br /> Sport</p>
-                <span class="list-program__segment">Writing</span>
-                <p class="list-program__text typographic-mr ">
-                  Informal Letter</p>
+                <ul class="list-program__contents">
+                  <li class="list-program__content">
+                    <span class="list-program__segment">Grammar</span>
+                    <p class="list-program__text typographic-mr ">Modal verbs
+                      Infinitive
+                      Gerund
+                      Participle: 1, 2</p>
+                  </li>
+                  <li class="list-program__content">
+                    <span class="list-program__segment">Vocabulary</span>
+                    <p class="list-program__text typographic-mr ">Travel & Tourism
+                      Culture & Free Time
+                      Sport</p>
+                  </li>
+                  <li class="list-program__content">
+                    <span class="list-program__segment">Writing</span>
+                    <p class="list-program__text typographic-mr ">Informal Letter</p>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-program__item">
               <div class="list-program__wrapper">
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
-                <span class="list-program__segment">Grammar</span>
-                <p class="list-program__text typographic-mr ">
-                  Clauses: Conditional <br /> and Wishes <br /> Direct / Reported speech <br />
-                  Preposition <br /> Conjunction <br /> Numeral</p>
-                <span class="list-program__segment">Vocabulary</span>
-                <p class="list-program__text typographic-mr ">
-                  Healthy Living <br /> Nature & Environment <br /> Money</p>
-                <span class="list-program__segment">Writing</span>
-                <p class="list-program__text typographic-mr ">
-                  Formal Letter</p>
+                <ul class="list-program__contents">
+                  <li class="list-program__content">
+                    <span class="list-program__segment">Grammar</span>
+                    <p class="list-program__text typographic-mr ">Clauses: Conditional
+                      and Wishes
+                      Direct / Reported speech
+                      Preposition
+                      Conjunction
+                      Numeral</p>
+                  </li>
+                  <li class="list-program__content">
+                    <span class="list-program__segment">Vocabulary</span>
+                    <p class="list-program__text typographic-mr ">Healthy Living
+                      Nature & Environment
+                      Money</p>
+                  </li>
+                  <li class="list-program__content">
+                    <span class="list-program__segment">Writing</span>
+                    <p class="list-program__text typographic-mr ">Formal Letter</p>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-program__item">
               <div class="list-program__wrapper">
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
-                <span class="list-program__segment">
-                  <span class="list-program__hidden-element">Grammar</span></span>
-                <p class="list-program__text typographic-mr ">
-                  Revision <br /> Tests </p>
+                <ul class="list-program__contents">
+                  <li class="list-program__content">
+                    <span class="list-program__segment">
+                      <span class="list-program__hidden-element">Grammar</span></span>
+                    <p class="list-program__text typographic-mr ">Revision
+                      Tests </p>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -280,22 +323,28 @@
 
       <section class="section-choosing container">
         <div class="section-choosing__wrapper">
-          <h2 class="section-choosing__title typographic-mb">Почему нас выбирают</h2>
+          <h2 class="section-choosing__title typographic-meb">Почему нас
+            выбирают</h2>
           <ul class="menu-problem section-choosing__menu-problem items">
             <li class="menu-problem__item">
               <p class="menu-problem__text">Обучение в малых командах</p>
             </li>
             <li class="menu-problem__item">
-              <p class="menu-problem__text">Визуализированные конспекты</p>
+              <p class="menu-problem__text">Визуализированные
+                конспекты</p>
             </li>
             <li class="menu-problem__item">
-              <p class="menu-problem__text">Каждое занятие имеет <br />цель и конкретный <br />результат </p>
+              <p class="menu-problem__text">Каждое занятие имеет
+                цель и конкретный
+                результат </p>
             </li>
             <li class="menu-problem__item">
               <p class="menu-problem__text">Реальные результаты преподавателя</p>
             </li>
             <li class="menu-problem__item">
-              <p class="menu-problem__text">Программа курса соответствует требованиям МОН Украины</p>
+              <p class="menu-problem__text">Программа курса
+                соответствует требованиям
+                МОН Украины</p>
             </li>
             <li class="menu-problem__item">
               <p class="menu-problem__text">Набор команд по уровням знаний</p>
@@ -309,34 +358,40 @@
           <h2 class="section-teacher__title typographic-meb">Преподаватель</h2>
           <div class="card section-teacher__card">
             <div class="card__img">
-              <img src="./images/teacher.png" alt="Елена Морева" class="img">
+              <!-- <img src="./images/teacher.png" alt="" class="img"> -->
+
+              <img class="img" src="./images/teacher.png" alt="Елена Морева"
+                srcset="images/teacher.png 320w, images/teacher-tabl.png 768w, images/teacher-desk.png 1280w, images/teacher-desk-larg.png 1680w"
+                sizes="(min-width: 1680px) 1680px, (min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px">
+
             </div>
-            <h3 class="card__title typographic-meb">Елена Морева</h3>
-            <ul class="card__items">
-              <li class="card__item">
-                <p class="card__description typographic-msb">Опыт подготовки учеников<br />
-                  к ВНО - 6 лет</p>
-              </li>
-              <li class="card__item">
-                <p class="card__description typographic-msb">Собственный результат сдачи ВНО - 197 баллов 2 года
-                  подряд</p>
-              </li>
-              <li class="card__item">
-                <p class="card__description typographic-msb">Сдала на отлично международный аналог ВНО - Кембриджский
-                  PET (Preliminary English Test)</p>
-              </li>
-            </ul>
-            <p class="card__text typographic-mr">Высшее образование получила в Институте международных отношений НАУ по
-              специальности
-              переводчик - аналитик.<br /><br />В свободное время проходит курсы от лучших университетов мира по
-              эффективному
-              преподаванию и методикам написания сочинений.<br /><br />В числе пройденных: English Grammar <br />and
-              Essay&shy Writing (Berkeley), English
-              Grammar&Style (The University of Queesland), How to Write an Essay (Berke&shy;ley), Academic and
-              Business
-              Writing (Berkeley), The Art of Teaching (GEMS edu&shy;cation), Powerful Tools for Teaching and Learning
-              (University of Houston).</p>
-            <a href="#" class="card__link typographic-mr">Cambrige English Entry Level Certificate</a>
+            <div class="card__content">
+              <h3 class="card__title typographic-meb">Елена Морева</h3>
+              <ul class="card__items">
+                <li class="card__item">
+                  <p class="card__description typographic-msb">Опыт подготовки учеников
+                    к ВНО - 6 лет</p>
+                </li>
+                <li class="card__item">
+                  <p class="card__description typographic-msb">Собственный результат сдачи ВНО - 197 баллов 2 года
+                    подряд</p>
+                </li>
+                <li class="card__item">
+                  <p class="card__description typographic-msb">Сдала на отлично международный аналог ВНО - Кембриджский
+                    PET (Preliminary English Test)</p>
+                </li>
+              </ul>
+              <p class="card__text typographic-mr">Высшее образование получила в Институте международных отношений НАУ
+                по специальности переводчик - аналитик.<br /><br />В свободное время проходит курсы от лучших
+                университетов мира по
+                эффективному преподаванию и методикам написания сочинений.<br /><br />В числе пройденных: English
+                Grammar
+                and Essay&shy Writing (Berkeley), English
+                Grammar&Style (The University of Queesland), How to Write an Essay (Berke&shy;ley), Academic and
+                Business Writing (Berkeley), The Art of Teaching (GEMS edu&shy;cation), Powerful Tools for Teaching and
+                Learning (University of Houston).</p>
+              <a href="#" class="card__link typographic-mr">Cambrige English Entry Level Certificate</a>
+            </div>
           </div>
         </div>
       </section>
@@ -349,13 +404,15 @@
             <ul class="list-warranty section-warranty__items">
               <li class="list-warranty__item">
                 <p class="list-warranty__text typographic-mm">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом
-                  пробном тестировании. Иначе мы вернем деньги.<span
+                  пробном
+                  тестировании. Иначе мы вернем деньги.<span
                     class="list-warranty__text typographic-mm list-warranty__text--colortext">*</span></p>
               </li>
               <li class="list-warranty__item">
                 <p class="list-warranty__text typographic-mm">Ты научишься писать сочинения минимум на 10 баллов из 14.
-                  <span class="list-warranty__text typographic-mm list-warranty__text--colortext">В то время как 20%
-                    учеников получили<br />за сочинение 0.</span>
+                  <span class="list-warranty__text typographic-mm list-warranty__text--colortext">В то
+                    время как 20% учеников получили
+                    за сочинение 0.</span>
                 </p>
               </li>
               <li class="list-warranty__item">
@@ -363,9 +420,8 @@
                   проведения занятий после формирования команд.</p>
               </li>
               <li class="list-warranty__item">
-                <p class="list-warranty__text typographic-mm">Команды будут сформированы,<br /> исходя из начального
-                  уровня
-                  учеников. Мы учитываем особенности каждого ученика.</p>
+                <p class="list-warranty__text typographic-mm">Команды будут сформированы,
+                  исходя из начального уровня учеников. Мы учитываем особенности каждого ученика.</p>
               </li>
             </ul>
           </div>
@@ -394,9 +450,10 @@
                   біоресурсів
                   і природокористування України</p>
                 <p class="graduate-card__text typographic-mm">За короткий час занять з Оленою я опанувала граматику і
-                  поповнила свій
-                  зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці ...
-                  <a class="graduate-card__link graduate-card__text graduate-card__text--colortext" href="#">Читать
+                  поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
+                  тарілці<p class="graduate-card__text graduate-card__text--wide ">. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене
+                  авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу
+                  похизуватись тим, що я студен</p>...<a class="graduate-card__link graduate-card__text graduate-card__text--colortext" href="#">Читать
                     дальше</a>
                 </p>
               </div>
