Added Tablet Device

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -17,7 +17,7 @@
     <div class="header__wrapper container">
       <nav class="navigation header__navigation ">
         <a href="#" class="logo navigation__logo">
-          <img class="img logo__img " src="./images/logo2x.png" alt="brand and company name"
+          <img class="img logo__img " src="./images/logo-mob.png" alt="brand and company name"
             srcset="images/logo-mob.png 320w, images/logo-tabl.png 768w, images/logo-desk.png 1280w"
             sizes="(min-width: 768px) 768px, 100wv">
         </a>
@@ -451,9 +451,11 @@
                   і природокористування України</p>
                 <p class="graduate-card__text typographic-mm">За короткий час занять з Оленою я опанувала граматику і
                   поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
-                  тарілці<p class="graduate-card__text graduate-card__text--wide ">. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене
-                  авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу
-                  похизуватись тим, що я студен</p>...<a class="graduate-card__link graduate-card__text graduate-card__text--colortext" href="#">Читать
+                  тарілці<span class="graduate-card__text graduate-card__text--wide typographic-mm">. Ми з Оленою стали
+                    друзями, тому що її справді хвилювала моя успішність. Вона стала для мене
+                    авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу
+                    похизуватись тим, що я студен</span>...<a
+                    class="graduate-card__link graduate-card__text graduate-card__text--colortext" href="#">Читать
                     дальше</a>
                 </p>
               </div>
@@ -507,15 +509,15 @@
               </div>
             </li>
           </ul>
-          <button class="section-slider__button  section-slider__button--right-arrow" type="button">
+          <button class="section-slider__button  section-slider__button--left-arrow" type="button">
             <svg class="icon section-slider__icon">
-              <use y="-4" x="-10" width="200%" height="165%" href="./images/icons-svg/symbol-defs.svg#icon-left-arrow">
+              <use y="-4" x="-12" width="200%" height="165%" href="./images/icons-svg/symbol-defs.svg#icon-left-arrow">
               </use>
             </svg>
           </button>
-          <button class="section-slider__button section-slider__button--left-arrow" type="button">
+          <button class="section-slider__button section-slider__button--right-arrow" type="button">
             <svg class="icon section-slider__icon">
-              <use y="-4" x="-10" width="200%" height="165%" href="./images/icons-svg/symbol-defs.svg#icon-right-arrow">
+              <use y="-4" x="-12" width="200%" height="165%" href="./images/icons-svg/symbol-defs.svg#icon-right-arrow">
               </use>
             </svg>
           </button>
@@ -531,7 +533,8 @@
               по нюансам ЗНО<br /> по английскому языку</h2>
             <p class="section-form__description typographic-msb">Оставь заявку на участие в
               <span class="section-form__description section-form__description--colortext"> бесплатном занятии. </span>
-              С вами свяжется консультант<br /> и ответит на вопросы.</p>
+              С вами свяжется консультант
+              и ответит на вопросы.</p>
             <input class="input-field section-form__input typographic-mb" type="text" name="name" placeholder="Имя*"
               minlength="4" maxlength="30" autocomplete="name" required>
             <input class="input-field section-form__input typographic-mb" type="tel" name="tel" placeholder="Телефон*"
@@ -551,7 +554,9 @@
       <ul class="footer__menu">
         <li class="footer__item footer__item--logo">
           <a href="#" class="footer__logo logo">
-            <img class="footer__img" src="./images/logo2x.png" alt="brand and company name" width="78" height="30">
+            <img class="img footer__img" src="./images/logo-mob.png" alt="brand and company name"
+              srcset="images/logo-mob.png 320w, images/logo-tabl.png 768w, images/logo-desk.png 1280w"
+              sizes="(min-width: 768px) 768px, 100wv">
           </a>
         </li>
         <li class="footer__item footer__item--form">
