Almost DD without footer

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -23,16 +23,16 @@
         </a>
         <ul class="menu navigation--list">
           <li class="menu__item">
-            <a class="menu__link" href="#">Программа обучения</a>
+            <a class="menu__link typographic-tb" href="#">Программа обучения</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">о нас</a>
+            <a class="menu__link typographic-tb" href="#">о нас</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">варианты обучения</a>
+            <a class="menu__link typographic-tb" href="#">варианты обучения</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">контакты</a>
+            <a class="menu__link typographic-tb" href="#">контакты</a>
           </li>
           <li class="menu__item menu__item--button">
             <button class="button button--lighter menu__button typographic-tb" href="#">консультация по
@@ -49,8 +49,9 @@
           <div class="section-training__content">
             <h2 class="section-training__title typographic-meb title">Комплексная подготовка к ВНО <br /> по английскому
               языку</h2>
-            <p class="section-training__slogan typographic-mb">Просто не будет. <br /> Но ты гарантировано наберешь</p>
-            <span class="section-training__point typographic-mb">+25 баллов</span>
+            <p class="section-training__slogan typographic-mb">Просто не будет. <br /> Но ты гарантировано наберешь
+              <span class="section-training__slogan section-training__slogan--colortext typographic-mb">+25
+                баллов</span></p>
             <button class="button button--light section-training__button typographic-tb" type="button">хочу на
               бесплатное занятие</button>
           </div>
@@ -67,32 +68,32 @@
           <ul class="menu-icons">
             <li class="menu-icons__item">
               <a href="#" class="menu-icons__link menu-icons__link--female">
-                <svg class=" menu-icons__icon" width="36px" height="36px">
-                  <use y="-1" x="-6" width="135%" height="130%" href="./images/icons-svg/symbol-defs.svg#icon-female">
+                <svg class="menu-icons__icon">
+                  <use y="-1" x="-7" width="135%" height="130%" href="./images/icons-svg/symbol-defs.svg#icon-female">
                   </use>
                 </svg>
               </a>
-              <p class="menu-icons__description">Адаптированная авторская программа ВНО</p>
+              <p class="menu-icons__description typographic-mb">Адаптированная авторская программа ВНО</p>
             </li>
             <li class="menu-icons__item">
               <a href="#" class="menu-icons__link menu-icons__link--mobile">
-                <svg class="menu-icons__icon" width="36px" height="36px">
-                  <use y="-1" x="-6" width="135%" height="130%"
+                <svg class="menu-icons__icon">
+                  <use y="-1" x="-7" width="135%" height="130%"
                     href="./images/icons-svg/symbol-defs.svg#icon-mobile-learning">
                   </use>
                 </svg>
               </a>
-              <p class="menu-icons__description">Современные методики обучения</p>
+              <p class="menu-icons__description typographic-mb">Современные методики обучения</p>
             </li>
             <li class="menu-icons__item">
               <a href="#" class="menu-icons__link menu-icons__link--insurance">
-                <svg class="menu-icons__icon" width="36px" height="36px">
-                  <use y="-1" x="-6" width="135%" height="130%"
+                <svg class="menu-icons__icon">
+                  <use y="-1" x="-7" width="135%" height="130%"
                     href="./images/icons-svg/symbol-defs.svg#icon-insurance">
                   </use>
                 </svg>
               </a>
-              <p class="menu-icons__description">Финансовая гарантия результата</p>
+              <p class="menu-icons__description typographic-mb">Финансовая гарантия результата</p>
             </li>
           </ul>
         </div>
@@ -113,22 +114,22 @@
               class="section-problem__title section-problem__title--colortext">помогаем</span> решить</h2>
           <ul class="menu-problem section-problem__menu-problem items">
             <li class="menu-problem__item">
-              <p class="menu-problem__text">Незнание грамматики</p>
+              <p class="menu-problem__text typographic-mb">Незнание грамматики</p>
             </li>
             <li class="menu-problem__item">
-              <p class="menu-problem__text">Неумение воспринимать устную английскую речь</p>
+              <p class="menu-problem__text typographic-mb">Неумение воспринимать устную английскую речь</p>
             </li>
             <li class="menu-problem__item">
-              <p class="menu-problem__text">Скупой словарный запас <br /> для написания сочинения</p>
+              <p class="menu-problem__text typographic-mb">Скупой словарный запас <br /> для написания сочинения</p>
             </li>
             <li class="menu-problem__item">
-              <p class="menu-problem__text">Подготовка в одиночку</p>
+              <p class="menu-problem__text typographic-mb">Подготовка в одиночку</p>
             </li>
             <li class="menu-problem__item">
-              <p class="menu-problem__text">Отсутствие единого <br /> ресурса знаний</p>
+              <p class="menu-problem__text typographic-mb">Отсутствие единого <br /> ресурса знаний</p>
             </li>
             <li class="menu-problem__item">
-              <p class="menu-problem__text">Недостаток самоорганизации и лень</p>
+              <p class="menu-problem__text typographic-mb">Недостаток самоорганизации и лень</p>
             </li>
           </ul>
         </div>
@@ -217,17 +218,16 @@
           <h2 class="section-program__title typographic-meb text-white">Наша программа</h2>
           <ul class="list-program section-program__list">
             <li class="list-program__item">
-
               <div class="list-program__wrapper">
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <ul class="list-program__contents">
                   <li class="list-program__content">
-                    <span class="list-program__segment">Grammar</span>
+                    <span class="list-program__segment typographic-mm">Grammar</span>
                     <p class="list-program__text typographic-mr ">Nouns & Articles
                       Adjectives & Adverb</p>
                   </li>
                   <li class="list-program__content">
-                    <span class="list-program__segment">Vocabulary</span>
+                    <span class="list-program__segment typographic-mm">Vocabulary</span>
                     <p class="list-program__text typographic-mr ">Family & Relations
                       People & Society</p>
                   </li>
@@ -239,13 +239,13 @@
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <ul class="list-program__contents">
                   <li class="list-program__content">
-                    <span class="list-program__segment">Grammar</span>
+                    <span class="list-program__segment typographic-mm">Grammar</span>
                     <p class="list-program__text typographic-mr ">Pronouns
                       Active Voice
                       Passive Voice</p>
                   </li>
                   <li class="list-program__content">
-                    <span class="list-program__segment">Vocabulary</span>
+                    <span class="list-program__segment typographic-mm">Vocabulary</span>
                     <p class="list-program__text typographic-mr">Home
                       School
                       Worky</p>
@@ -258,20 +258,20 @@
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <ul class="list-program__contents">
                   <li class="list-program__content">
-                    <span class="list-program__segment">Grammar</span>
+                    <span class="list-program__segment typographic-mm">Grammar</span>
                     <p class="list-program__text typographic-mr ">Modal verbs
                       Infinitive
                       Gerund
                       Participle: 1, 2</p>
                   </li>
                   <li class="list-program__content">
-                    <span class="list-program__segment">Vocabulary</span>
+                    <span class="list-program__segment typographic-mm">Vocabulary</span>
                     <p class="list-program__text typographic-mr ">Travel & Tourism
                       Culture & Free Time
                       Sport</p>
                   </li>
                   <li class="list-program__content">
-                    <span class="list-program__segment">Writing</span>
+                    <span class="list-program__segment typographic-mm">Writing</span>
                     <p class="list-program__text typographic-mr ">Informal Letter</p>
                   </li>
                 </ul>
@@ -282,7 +282,7 @@
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <ul class="list-program__contents">
                   <li class="list-program__content">
-                    <span class="list-program__segment">Grammar</span>
+                    <span class="list-program__segment typographic-mm">Grammar</span>
                     <p class="list-program__text typographic-mr ">Clauses: Conditional
                       and Wishes
                       Direct / Reported speech
@@ -291,13 +291,13 @@
                       Numeral</p>
                   </li>
                   <li class="list-program__content">
-                    <span class="list-program__segment">Vocabulary</span>
+                    <span class="list-program__segment typographic-mm">Vocabulary</span>
                     <p class="list-program__text typographic-mr ">Healthy Living
                       Nature & Environment
                       Money</p>
                   </li>
                   <li class="list-program__content">
-                    <span class="list-program__segment">Writing</span>
+                    <span class="list-program__segment typographic-mm">Writing</span>
                     <p class="list-program__text typographic-mr ">Formal Letter</p>
                   </li>
                 </ul>
@@ -308,7 +308,7 @@
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <ul class="list-program__contents">
                   <li class="list-program__content">
-                    <span class="list-program__segment">
+                    <span class="list-program__segment typographic-mm">
                       <span class="list-program__hidden-element">Grammar</span></span>
                     <p class="list-program__text typographic-mr ">Revision
                       Tests </p>
@@ -381,14 +381,17 @@
                     PET (Preliminary English Test)</p>
                 </li>
               </ul>
-              <p class="card__text typographic-mr">Высшее образование получила в Институте международных отношений НАУ
-                по специальности переводчик - аналитик.<br /><br />В свободное время проходит курсы от лучших
-                университетов мира по
-                эффективному преподаванию и методикам написания сочинений.<br /><br />В числе пройденных: English
+              <p class="card__text card__text--position typographic-mr">Высшее образование получила в Институте
+                международных отношений НАУ
+                по специальности переводчик - аналитик.</p>
+              <p class="card__text typographic-mr">В свободное время проходит курсы от лучших
+                университетов мира по эффективному преподаванию и методикам написания сочинений.</p>
+              <p class="card__text typographic-mr">В числе пройденных: English
                 Grammar
-                and Essay&shy Writing (Berkeley), English
+                and Essay&shy Writing (Berke&shy;ley), English
                 Grammar&Style (The University of Queesland), How to Write an Essay (Berke&shy;ley), Academic and
-                Business Writing (Berkeley), The Art of Teaching (GEMS edu&shy;cation), Powerful Tools for Teaching and
+                Business Writing (Berke&shy;ley), The Art of Teaching (GEMS edu&shy;cation), Powerful Tools for Teaching
+                and
                 Learning (University of Houston).</p>
               <a href="#" class="card__link typographic-mr">Cambrige English Entry Level Certificate</a>
             </div>
@@ -409,8 +412,9 @@
                     class="list-warranty__text typographic-mm list-warranty__text--colortext">*</span></p>
               </li>
               <li class="list-warranty__item">
-                <p class="list-warranty__text typographic-mm">Ты научишься писать сочинения минимум на 10 баллов из 14.
-                  <span class="list-warranty__text typographic-mm list-warranty__text--colortext">В то
+                <p class="list-warranty__text typographic-mm">Ты научишься писать сочинения минимум на 10 баллов из
+                  14.<br />
+                  <span class="list-warranty__text list-warranty__text--colortext typographic-mm">В то
                     время как 20% учеников получили
                     за сочинение 0.</span>
                 </p>
@@ -435,10 +439,15 @@
             <li class="slider__item slider__item--first-card">
               <div class="slider__link-wrapper">
                 <a href="#" class="slider__link slider__link--img">
-                  <img class="slider__img" src="./images/graduate1.png" alt="Тоня Кучеровская" width="80" height="80">
+                  <img class="img slider__img" src="./images/graduate1.png" alt="Тоня Кучеровская">
+
+                  <!-- <img class="img logo__img " src="./images/logo-mob.png" alt="brand and company name"
+                  srcset="images/logo-mob.png 320w, images/logo-tabl.png 768w, images/logo-desk.png 1280w"
+                  sizes="(min-width: 768px) 768px, 100wv"> -->
+
                 </a>
                 <a href="#" class="slider__link slider__link--icon">
-                  <svg class="slider__icon" width="25px" height="14px">
+                  <svg class="slider__icon" width="26px" height="14px">
                     <use y="-5" x="-11" width="186%" height="176%" href="./images/icons-svg/symbol-defs.svg#icon-vk">
                     </use>
                   </svg>
